@@ -7,6 +7,7 @@ Revelation changelog
 	* don't wrap gnome_authentication_manager_dialog_is_visible()
 	(only available from libgnomeui-2.7.92)
 
+	* minor cleanups of authmanager wrapping code
 
 2005-03-23  Erik Grinaker <erikg@codepoet.no>
 
